Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98812

Connect warning in mediaplayer example

XMLWordPrintable

    • Linux/Wayland
    • ec714a1bd4e6a98f6c1fe6433340d213c99885ee (qt/qtinterfaceframework/dev) d8d320f90060b26193dd0919ddfc38da8c99c0b4 (qt/qtinterfaceframework/6.2) 22d388837aef47a676179fb20c4004f5d3a9d46e (qt/qtinterfaceframework/6.2.2)

      When starting the mediaplayer example you can see the following warning:

      qt.core.qobject.connect: QObject::connect(QAudioOutput, MediaPlayerBackend): invalid nullptr parameter.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gagi Dominik Holland
            gagi Dominik Holland
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes