ifmedia: Fix nullptr connection in the media_simulator backend

The QAudioOutput of the media player needs to be initialized before
connecting the signals.

Fixes: QTBUG-98812
Change-Id: I76feea9bcae2c2effafc0fdab68d2d3184103e7c
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit ec714a1bd4e6a98f6c1fe6433340d213c99885ee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>